my first commit

--- a/UniversityManagementSystem/UniversityManagementSystem.csproj
+++ b/UniversityManagementSystem/UniversityManagementSystem.csproj
@@ -118,23 +118,23 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="BAL\Designation.cs" />
     <Compile Include="BAL\Semester.cs" />
+    <Compile Include="Controllers\CourseAssignsController.cs" />
     <Compile Include="Controllers\CourseController.cs" />
     <Compile Include="Controllers\DepartmentController.cs" />
     <Compile Include="Controllers\DesignationController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\SemesterController.cs" />
+    <Compile Include="Controllers\StudentsController.cs" />
     <Compile Include="Controllers\TeacherController.cs" />
     <Compile Include="DAL\ProjectDBContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201509142116264_initvs01.cs" />
-    <Compile Include="Migrations\201509142116264_initvs01.Designer.cs">
-      <DependentUpon>201509142116264_initvs01.cs</DependentUpon>
-    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Course.cs" />
+    <Compile Include="Models\CourseAssign.cs" />
     <Compile Include="Models\Department.cs" />
+    <Compile Include="Models\Student.cs" />
     <Compile Include="Models\Teacher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -168,7 +168,9 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -207,6 +209,17 @@
     <Content Include="Views\Teacher\Details.cshtml" />
     <Content Include="Views\Teacher\Edit.cshtml" />
     <Content Include="Views\Teacher\Index.cshtml" />
+    <Content Include="Views\CourseAssigns\Create.cshtml" />
+    <Content Include="Views\CourseAssigns\Delete.cshtml" />
+    <Content Include="Views\CourseAssigns\Details.cshtml" />
+    <Content Include="Views\CourseAssigns\Edit.cshtml" />
+    <Content Include="Views\CourseAssigns\Index.cshtml" />
+    <Content Include="Views\CourseAssigns\SearchByDepartmentCourse.cshtml" />
+    <Content Include="Views\Students\Create.cshtml" />
+    <Content Include="Views\Students\Delete.cshtml" />
+    <Content Include="Views\Students\Details.cshtml" />
+    <Content Include="Views\Students\Edit.cshtml" />
+    <Content Include="Views\Students\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -214,11 +227,6 @@
   <ItemGroup>
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201509142116264_initvs01.resx">
-      <DependentUpon>201509142116264_initvs01.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
