--- a/UniversityManagementSystem/Web.config
+++ b/UniversityManagementSystem/Web.config
@@ -15,7 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="universityDBContext" connectionString="Data Source=.\SQLExpress;Initial Catalog=universityDBVS03;Integrated Security=true;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
+    <add name="universityDBContext" connectionString="Data Source=ARIF;Initial Catalog=universityDBVS03;Integrated Security=true;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
